<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainPageActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="InvalidId" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--Header of the layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="24dp"
            android:id="@+id/linear_header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fredoka_one"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:layout_weight="1"/>

        </LinearLayout>

<!--Catch phrases of the layout-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            app:layout_constraintTop_toBottomOf="@id/linear_header"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="vertical"
            android:id="@+id/linear_phrases">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_extralight"
                    android:paddingEnd="6dp"
                    android:text="@string/text_catch_phrase_part_one_thin"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/text_catch_phrase_part_one_bold"
                    android:textColor="@color/orange"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_extralight"
                    android:paddingEnd="6dp"
                    android:text="@string/text_catch_phrase_part_two_thin"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/text_catch_phrase_part_two_bold"
                    android:textColor="@color/orange"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_extralight"
                    android:paddingEnd="6dp"
                    android:text="@string/text_catch_phrase_part_three_thin"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fredoka_one"
                    android:text="@string/text_catch_phrase_part_three_bold"
                    android:textColor="@color/orange"
                    android:textSize="20sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/text_instructions"
                app:flow_horizontalAlign="center"
                app:layout_constraintBottom_toTopOf="@id/linear_container_filters"
                app:layout_constraintTop_toBottomOf="@id/linear_phrases"
                android:textSize="12sp"/>

        </LinearLayout>

<!--Filters container of the layout-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/linear_container_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linear_phrases"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="24dp"
            android:orientation="horizontal">



        </androidx.recyclerview.widget.RecyclerView>

<!--Food options container of the layout-->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/linear_container_food_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linear_container_filters"
            app:layout_constraintLeft_toLeftOf="parent">


        </androidx.recyclerview.widget.RecyclerView>

<!--Total of the purchase of the layout-->
        <LinearLayout
            android:id="@+id/linear_total_price"
            app:layout_constraintTop_toBottomOf="@id/linear_container_food_cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/text_total"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textColor="@color/gray"/>

            <TextView
                android:id="@+id/text_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_weight="0"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="R$0.00"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textColor="@color/gray"/>
        </LinearLayout>

<!--Calculate button-->
        <Button
            android:id="@+id/button_finish_purchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_fixed_button"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/button_make_order"
            app:layout_constraintTop_toBottomOf="@+id/linear_total_price"
            android:textSize="24sp"
            app:backgroundTint="@null"
            android:textColor="@color/white"
            android:layout_margin="32dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>