<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_sheet"
    android:paddingVertical="32dp"
    android:paddingHorizontal="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/text_table_number"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="4dp"/>

    <EditText
        android:id="@+id/edit_table_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_table_hint"
        android:background="@drawable/bg_edittext"
        android:padding="14dp"
        android:layout_marginTop="4dp"
        android:inputType="number"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button_goto_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_button_pattern"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/button_ok"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:backgroundTint="@null" />

</LinearLayout>